<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_score">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/restart"
            android:onClick="restart"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/cancel"
            android:onClick="exit"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">




        <TableLayout
            android:layout_marginBottom="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="180dp"
                    android:id="@+id/iNewHighest"
                    android:background="@drawable/trophy1"
                    android:visibility="gone"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_points"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:fontFamily="@font/astronaut_personaluse"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/astronaut_personaluse"
                    android:text="50"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="32sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="40dp">

                <TextView
                    android:id="@+id/tvHighestText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/astronaut_personaluse"
                    android:text="@string/highest"
                    android:textColor="#039100"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvHighestValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-20dp"
                    android:fontFamily="@font/astronaut_personaluse"
                    android:text="100"
                    android:textColor="#039100"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_3"
                    android:textSize="22sp"
                    android:textColor="#99FFFFFF"
                    android:fontFamily="@font/astronaut_personaluse"
                    android:layout_gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/scoreOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topscore"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/astronaut_personaluse"
                    android:layout_gravity="center"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/scoreTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topscore"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/astronaut_personaluse"
                    android:layout_gravity="center"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/scoreThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topscore"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/astronaut_personaluse"
                    android:layout_gravity="center"/>
            </TableRow>


        </TableLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="80dp"/>
    </LinearLayout>
</LinearLayout>